--- a/event_consumer/Cargo.toml
+++ b/event_consumer/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 aws-config = "1.5.8"
 aws_lambda_events = "0.15.1"
 dotenvy = "0.15.7"
+env_logger = "0.11.5"
 lambda_runtime = "0.13.0"
+log = "0.4.22"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
