--- a/event_consumer/Cargo.toml
+++ b/event_consumer/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 aws-config = "1.5.8"
 aws_lambda_events = "0.15.1"
+chrono = { version = "0.4.38", features = ["serde"] }
 dotenvy = "0.15.7"
 env_logger = "0.11.5"
 lambda_runtime = "0.13.0"
