--- a/.github/workflows/cdk.yaml
+++ b/.github/workflows/cdk.yaml
@@ -25,6 +25,10 @@ jobs:
           npm install -g aws-cdk
           npm install
 
+      - name: Install necessary packages
+        run: |
+          sudo apt-get install pkg-config libssl-dev
+
       - name: Deploy using CDK
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
