--- a/event_consumer/Cargo.toml
+++ b/event_consumer/Cargo.toml
@@ -16,3 +16,4 @@ reqwest = "0.12.8"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
+openssl = { version = "0.10", features = ["vendored"] }
