--- a/.github/workflows/cdk.yaml
+++ b/.github/workflows/cdk.yaml
@@ -27,8 +27,9 @@ jobs:
 
       - name: Install necessary packages
         run: |
-          sudo apt-get update
+          sudo apt update
           sudo apt install musl-tools
+          musl-gcc --version
 
       - name: Deploy using CDK
         env:
