--- a/.github/workflows/cdk.yaml
+++ b/.github/workflows/cdk.yaml
@@ -25,12 +25,16 @@ jobs:
           npm install -g aws-cdk
           npm install
 
-      - name: Deploy using CDK
-        env:
-          LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+      - name: Install necessary packages
         run: |
           sudo apt update
           sudo apt install musl-tools
           musl-gcc --version
+
+      - name: Deploy using CDK
+        env:
+          LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+          RUSTFLAGS: '-C linker=musl-gcc'
+        run: |
           cdk bootstrap
           cdk deploy apigateway-line-bot-stack --require-approval never
